# ChangeLog for dev-games/clanlib
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/clanlib/ChangeLog,v 1.33 2006/06/08 09:53:06 vapier Exp $

  08 Jun 2006; Mike Frysinger <vapier@gentoo.org> clanlib-0.6.5-r3.ebuild:
  Add support for USE=lua #135289 by James Le Cuirot.

  08 Jun 2006; Mike Frysinger <vapier@gentoo.org>
  +files/clanlib-0.6.5-uclibc.patch, clanlib-0.6.5-r3.ebuild:
  Add support for building on uClibc systems #135081 by James Le Cuirot.

  13 May 2006; Mike Frysinger <vapier@gentoo.org>
  files/clanlib-0.6.5-DirectFB-update.patch:
  Fix building with newer DirectFB #132945 by ferret.

*clanlib-0.7.8-r2 (26 Mar 2006)

  26 Mar 2006; <Tupone@gentoo.org> +files/clanlib-0.7.8-refreshfix.patch,
  +clanlib-0.7.8-r2.ebuild:
  Fix for wormux segfault, bug #96382 by Radek "rush" Senfeld

  26 Feb 2006; <Tupone@gentoo.org> clanlib-0.7.8-r1.ebuild:
  Modular X dependency fix
  clanJavaScript & clanVoice are not supported by clanlib-0.7.8

  11 Feb 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  clanlib-0.6.5-r3.ebuild, clanlib-0.7.8-r1.ebuild:
  Clean up existing modular X depedencies a bit.  Add modular X dependencies for
  older version (bug #120897).

  14 Jan 2006; Mark Loeser <halcy0n@gentoo.org>
  +files/clanlib-0.6.5-gcc41.patch, +files/clanlib-0.7.8-gcc41.patch,
  clanlib-0.6.5-r3.ebuild, clanlib-0.7.8-r1.ebuild:
  Add patch by Kristiaan Lenaerts <kristiaan.lenaerts AT gmail DOT com> to fix
  compilation with gcc-4.1; bug #115847

  13 Jan 2006; Stefan Schweizer <genstef@gentoo.org>
  clanlib-0.7.8-r1.ebuild:
  Add modular depends

*clanlib-0.6.5-r3 (01 Mar 2005)

  01 Mar 2005; Mike Frysinger <vapier@gentoo.org> +clanlib-0.6.5-r3.ebuild:
  Touchup config script to not suck.

  01 Mar 2005; Mike Frysinger <vapier@gentoo.org>
  +files/clanlib-0.6.5-freetype.patch, clanlib-0.6.5-r2.ebuild: