@@ -37,34 +37,34 @@ AUX clanlib-0.7.8-refreshfix.patch 435 RMD160 e4562f30dea51c6b1f01014611f3a7ebf0
 MD5 0056626610eb4285f75e571aae2c6662 files/clanlib-0.7.8-refreshfix.patch 435
 RMD160 e4562f30dea51c6b1f01014611f3a7ebf0976ca5 files/clanlib-0.7.8-refreshfix.patch 435
 SHA256 1cb0bab20ef41f364d5bb4395a78213f4ad8fa187bc49cc5f85e80544f557ffa files/clanlib-0.7.8-refreshfix.patch 435
-DIST ClanLib-0.6.5-1.tar.gz 2183097
-DIST ClanLib-0.7.8-1.tar.bz2 6567261 RMD160 b22dbb97010e7b514cbbe3da85a52a1aafe2c686 SHA256 742b027b75160d0f17b913f7b3089c901717081d12d3ed1d1c38c108939793b8
-EBUILD clanlib-0.6.5-r3.ebuild 2517 RMD160 8277ee84be28f0a584229b27b1bd3e91ae342b24 SHA1 e4aa4743c5c49b327264e4f050f1bd017722f714 SHA256 ed4df69a02e244e5a8037c037263f3f4aef3e223e792d4c3605556b1b8b86ec1
-MD5 76252df6b48b3ff43806c19a4ed2e940 clanlib-0.6.5-r3.ebuild 2517
-RMD160 8277ee84be28f0a584229b27b1bd3e91ae342b24 clanlib-0.6.5-r3.ebuild 2517
-SHA256 ed4df69a02e244e5a8037c037263f3f4aef3e223e792d4c3605556b1b8b86ec1 clanlib-0.6.5-r3.ebuild 2517
+DIST ClanLib-0.6.5-1.tar.gz 2183097 RMD160 31f060f438925c9ec7dd2a9466ed6bb367549b3b SHA1 d3a8558c1f8b652742636e4712b5b9911f74e4d8 SHA256 62e16913423945475f3541fc97deaeb9b0f735b6c93c88725a6a771d5a882db5
+DIST ClanLib-0.7.8-1.tar.bz2 6567261 RMD160 b22dbb97010e7b514cbbe3da85a52a1aafe2c686 SHA1 1416b09d8aa3549b1adeef50ba00df59b20917e6 SHA256 742b027b75160d0f17b913f7b3089c901717081d12d3ed1d1c38c108939793b8
+EBUILD clanlib-0.6.5-r3.ebuild 2488 RMD160 f87789556f310cd3514c018eb9f82ca9c6c86ccc SHA1 5e1d06de2360d1b019586346771dd7e16262dad8 SHA256 96c6b22f3768d93b37b825a8e3d8c2373049fedc73c04139595b38562694fc9e
+MD5 ca9b449ba12c273b035c9c4aa80fbe61 clanlib-0.6.5-r3.ebuild 2488
+RMD160 f87789556f310cd3514c018eb9f82ca9c6c86ccc clanlib-0.6.5-r3.ebuild 2488
+SHA256 96c6b22f3768d93b37b825a8e3d8c2373049fedc73c04139595b38562694fc9e clanlib-0.6.5-r3.ebuild 2488
 EBUILD clanlib-0.7.8-r2.ebuild 2369 RMD160 367e0228f1d72ab25fa68dd9a51d5769d1390281 SHA1 ba8123215714795cd37c0107c95a48b9de6db971 SHA256 752a81a5fbffe92dc98c3d1f593e24f4a56819bc088d5fdf82f648f4ec190c9d
 MD5 ee9ea6af33bd9154656e1ee012234b5b clanlib-0.7.8-r2.ebuild 2369
 RMD160 367e0228f1d72ab25fa68dd9a51d5769d1390281 clanlib-0.7.8-r2.ebuild 2369
 SHA256 752a81a5fbffe92dc98c3d1f593e24f4a56819bc088d5fdf82f648f4ec190c9d clanlib-0.7.8-r2.ebuild 2369
-MISC ChangeLog 7260 RMD160 e91893879008586f6e8af52d76b8e31bf712bb4b SHA1 17e82b12bd59bd16785ee08d0c1bf220bde18412 SHA256 2689c41bc46ed2d17ff85e65dd64e4b11b9b30592f288377dd902de62b98ddd9
-MD5 7d17b37f3be16d8f7915cf24ab47092c ChangeLog 7260
-RMD160 e91893879008586f6e8af52d76b8e31bf712bb4b ChangeLog 7260
-SHA256 2689c41bc46ed2d17ff85e65dd64e4b11b9b30592f288377dd902de62b98ddd9 ChangeLog 7260
+MISC ChangeLog 7413 RMD160 851e71458b63f8226a2dbf279322b4f350807066 SHA1 3b5291cc4fed29ebeb1c47ab47d9338930969009 SHA256 ef47d05b155d5786d3d6512ab86f35a436a2629879f12fc73fd08f8f5347932f
+MD5 70ab29fcd93ac1560c05a75c83f94edb ChangeLog 7413
+RMD160 851e71458b63f8226a2dbf279322b4f350807066 ChangeLog 7413
+SHA256 ef47d05b155d5786d3d6512ab86f35a436a2629879f12fc73fd08f8f5347932f ChangeLog 7413
 MISC metadata.xml 3010 RMD160 e619d1e2cbf474c526bf1deb3dd15a0117643e66 SHA1 44ca5cd8acbcf860a068802ceca92f39693846aa SHA256 3b9b77c59757bc65889103949b95597432d5e00f69fdf4bdc909f50dcbff98ac
 MD5 33ee8adc6546aef9881086d98bfadb79 metadata.xml 3010
 RMD160 e619d1e2cbf474c526bf1deb3dd15a0117643e66 metadata.xml 3010
 SHA256 3b9b77c59757bc65889103949b95597432d5e00f69fdf4bdc909f50dcbff98ac metadata.xml 3010
-MD5 3e439d751339f684be1c709644d71a4d files/digest-clanlib-0.6.5-r3 68
-RMD160 3ef0e3d707c3f4d3a176b2b43b2a72946f0c0bc8 files/digest-clanlib-0.6.5-r3 68
-SHA256 2b1272b156642f51d2c9de746284a62b1ec0b000bfac99a3ae2794a48f50679c files/digest-clanlib-0.6.5-r3 68
+MD5 c56b75945ca914367727ea3a93a6cc7d files/digest-clanlib-0.6.5-r3 250
+RMD160 49f8c70bdd05f3923ddb6a3f9e74ced036d93f24 files/digest-clanlib-0.6.5-r3 250
+SHA256 64be8ac170a0cdd517c7ee4e8557ea4614e9def163d6241cb5a00106703cab1e files/digest-clanlib-0.6.5-r3 250
 MD5 02ebcc5ba4f293b75824427ac799d514 files/digest-clanlib-0.7.8-r2 253
 RMD160 afe72e12986e2080029071e179370ba4ceb34471 files/digest-clanlib-0.7.8-r2 253
 SHA256 2d33b72d6157f3dc50ef950fdae218e425b0faf6e38220dd98a64d46774779ac files/digest-clanlib-0.7.8-r2 253
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.3 (GNU/Linux)
+Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFEh/R32+ySkm8kpY0RAlzgAJ9FmKD9JViKjBKOHhg2QJUEVopAvQCgpM7S
-iB+6es52CXMFZ/7gSWbu4ZE=
-=l1AR
+iD8DBQFFBeVl2CTtIKiFlQIRApzaAJ9/OxhAGgatsrtkvGUq+eu+U8P6BgCfYYDa
+ePb4x1dC1sTl+wIKq+jIf0g=
+=t8f6
 -----END PGP SIGNATURE-----
