@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/clanlib/Attic/clanlib-0.6.5-r3.ebuild,v 1.9 2006/06/08 09:53:06 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/clanlib/Attic/clanlib-0.6.5-r3.ebuild,v 1.10 2006/09/11 22:38:17 tupone Exp $
 
 inherit eutils flag-o-matic
 
@@ -10,8 +10,8 @@ SRC_URI="http://www.clanlib.org/download/legacy/ClanLib-${PV}-1.tar.gz"
 
 LICENSE="LGPL-2"
 SLOT="0.6"
-KEYWORDS="amd64 x86" #not big endian safe #82779
-IUSE="lua arts oss esd alsa png opengl truetype X vorbis mikmod jpeg directfb joystick"
+KEYWORDS="-amd64 x86" #not big endian safe #82779
+IUSE="arts oss esd alsa png opengl truetype X vorbis mikmod jpeg directfb joystick"
 
 DEPEND=">=media-libs/hermes-1.3.2
 	X? (
@@ -23,7 +23,6 @@ DEPEND=">=media-libs/hermes-1.3.2
 			virtual/x11
 		)
 	)
-	lua? ( dev-lang/lua )
 	png? ( media-libs/libpng )
 	jpeg? ( >=media-libs/jpeg-6b )
 	mikmod? ( >=media-libs/libmikmod-3.1.9 )
@@ -66,7 +65,7 @@ src_compile() {
 		--includedir=/usr/include/${P} \
 		--enable-network \
 		$(use_enable x86 asm386) \
-		$(use_enable lua) \
+		--disable-lua \
 		--enable-dyn \
 		$(use_enable X x11) \
 		$(use_enable directfb) \
