@@ -1,1 +1,3 @@
 MD5 7115921953ef6fa45102c28622493650 ClanLib-0.6.5-1.tar.gz 2183097
+RMD160 31f060f438925c9ec7dd2a9466ed6bb367549b3b ClanLib-0.6.5-1.tar.gz 2183097
+SHA256 62e16913423945475f3541fc97deaeb9b0f735b6c93c88725a6a771d5a882db5 ClanLib-0.6.5-1.tar.gz 2183097
