@@ -1,6 +1,10 @@
 # ChangeLog for dev-games/clanlib
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/clanlib/ChangeLog,v 1.33 2006/06/08 09:53:06 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/clanlib/ChangeLog,v 1.34 2006/09/11 22:38:17 tupone Exp $
+
+  11 Sep 2006; <tupone@gentoo.org> clanlib-0.6.5-r3.ebuild:
+  Removed lua flag. Bug #136587 by Kai.
+  Removed amd64 as is not actually buildable there.
 
   08 Jun 2006; Mike Frysinger <vapier@gentoo.org> clanlib-0.6.5-r3.ebuild:
   Add support for USE=lua #135289 by James Le Cuirot.
